# DiligentSamples1

./: README.md
SampleBase/src/: SampleApp.cpp
Samples/GLTFViewer/: CMakeLists.txt
Tutorials/: CMakeLists.txt
Tutorials/Tutorial27_SSR/: CMakeLists.txt
Tutorials/Tutorial27_SSR/assets/: DepthDownsample.hlsl  FillGbuffersPS.hlsl  IrradianceMap.hlsl  PPR_HolepatchingPS.hlsl  PPR_HolepatchingVS.hlsl  PPR_Projection.hlsl  PPR_ReflectionPS.hlsl  SSRRenderCommon.hlsl  SSSR_ClassifyTiles.hlsl  SSSR_Common.hlsl  SpecularMap.hlsl  generateMips.hlsl  panoToCube.hlsl  renderSceneBRDFPS.hlsl  renderSceneBRDFVS.hlsl
Tutorials/Tutorial27_SSR/src/: Tutorial27_SSR.cpp  Tutorial27_SSR.hpp
Tutorials/Tutorial28_LightShadowPlayground/: CMakeLists.txt
Tutorials/Tutorial28_LightShadowPlayground/assets/: Packing.h.hlsl  Shader_Defs.h.hlsl  batchCompaction.hlsl  clearVisibilityBuffers.hlsl  cull_resources.h.hlsl  triangleFiltering.hlsl  vb_resources.h.hlsl  visibilityBufferPass_frag.hlsl  visibilityBufferPass_vert.hlsl  visibilityBufferShaderPS.hlsl  visibilityBufferShaderVS.hlsl
Tutorials/Tutorial28_LightShadowPlayground/assets/Models/: SanMiguel.gltf  SanMiguel_AlphaTested.gltf  SanMiguel_Flags.gltf  SanMiguel_Opaque.gltf
Tutorials/Tutorial28_LightShadowPlayground/assets/Textures/: 0001_carros.dds  052terresable.dds  052terresable_NRM.dds  052terresable_SPEC.dds  06-30-1997.dds  BWK_1024.dds  BWK_1024_SPEC.dds  Barro_2.dds  Barro_2_NRM.dds  Barro_2_SPEC.dds  D30_Smiguel_2003_7758.dds  D30_Smiguel_2003_7768.dds  D30_Smiguel_2003_7785.dds  D30_Smiguel_2003_7812.dds  D30_Smiguel_2003_7815.dds  D30_Smiguel_2003_7833.dds  D30_Smiguel_2003_7843.dds  Default.dds  Default_NRM.dds  Default_SPEC.dds  Default_SPEC_TRANS.dds  EU15lef.dds  FL13lef1.dds  FL13lef1_NRM.dds  FL13lef4.dds  FL13lef5.dds  FL13pet1.dds  FL13pet2.dds  FL13pet3.dds  FL13stm.dds  FL16lef1.dds  FL16lef3.dds  FL16lef3_NRM.dds  FL16pet1.dds  FL16stm.dds  FL17cnt.dds  FL17lef1.dds  FL17lef2.dds  FL17lef2_NRM.dds  FL17lef3.dds  (+287 more)
Tutorials/Tutorial28_LightShadowPlayground/src/: Geometry.cpp  Geometry.h  RingBuffer.h  SDFConstant.h  ShaderDef.h  Tutorial28_LightShadowPlayground.cpp  Tutorial28_LightShadowPlayground.hpp
Tutorials/Tutorial29_TBDR/: CMakeLists.txt
Tutorials/Tutorial29_TBDR/assets/: BasePassDefault.hlsl  DeferredLighting.hlsl  SDFShared.hlsl  SSAO.hlsl  Sampler.hlsl  Shadows.hlsl  TAA.hlsl
Tutorials/Tutorial29_TBDR/assets/models/: column.gltf
Tutorials/Tutorial29_TBDR/src/: Mesh.cpp  Mesh.h  Tutorial29_TBDR.cpp  Tutorial29_TBDR.hpp
Tutorials/Tutorial30_VirtualTexture/: CMakeLists.txt
Tutorials/Tutorial30_VirtualTexture/assets/: basic.frag.hlsl  basic.vert.hlsl
Tutorials/Tutorial30_VirtualTexture/src/: Mesh.cpp  Tutorial30_VirtualTexture.cpp  Tutorial30_VirtualTexture.hpp
Tutorials/Tutorial31_GpuDriver1/: CMakeLists.txt
Tutorials/Tutorial31_GpuDriver1/assets/: model.psh  modelSimple.vsh
Tutorials/Tutorial31_GpuDriver1/assets/Models/: .gitattributes  Dragon.gltf
Tutorials/Tutorial31_GpuDriver1/src/: MeshSTL.cpp  Tutorial31_GpuDriver1.cpp  Tutorial31_GpuDriver1.hpp
Tutorials/Tutorial31_GpuDriver2/: CMakeLists.txt
Tutorials/Tutorial31_GpuDriver2/assets/: Common.hlsl  Shader_Defs.h.hlsl  model.vsh  modelSimple.psh  triangleFiltering.hlsl
Tutorials/Tutorial31_GpuDriver2/src/: Geometry.cpp  Geometry.h  ShaderDef.h  Tutorial31_GpuDriver2.cpp  Tutorial31_GpuDriver2.hpp
Tutorials/Tutorial32_VirtualGeomtry/: CMakeLists.txt
Tutorials/Tutorial32_VirtualGeomtry/assets/: viewer.hlsl
Tutorials/Tutorial32_VirtualGeomtry/src/: Bounds.cpp  Cluster.cpp  Cluster.h  MeshSTL.h  MeshUtil.h  Partitioner.cpp  Tutorial32_VirtualGeomtry.cpp  Tutorial32_VirtualGeomtry.hpp  metis.h
Tutorials/Tutorial32_VirtualGeomtry/src/MeshSimplify/: HashTable.h  Heap.cpp  MeshSimplify.cpp
Tutorials/Tutorial32_VirtualGeomtry2/: CMakeLists.txt  metis.lib
Tutorials/Tutorial32_VirtualGeomtry2/assets/: culling.hlsl  viewer.hlsl
Tutorials/Tutorial32_VirtualGeomtry2/src/: Tutorial32_VirtualGeomtry2.cpp  Tutorial32_VirtualGeomtry2.hpp  VirtualMesh.cpp
Tutorials/Tutorial32_VirtualGeomtry2/src/MeshSimplify/: BitArray.h  HashTable.cpp
Tutorials/Tutorial32_VirtualGeomtry3/: CMakeLists.txt
Tutorials/Tutorial32_VirtualGeomtry3/assets/: culling.hlsl  hzb.hlsl  viewer.hlsl
Tutorials/Tutorial32_VirtualGeomtry3/src/: Bounds.h  Partitioner.h  Tutorial32_VirtualGeomtry3.cpp  Tutorial32_VirtualGeomtry3.hpp  VirtualMesh.h  span.h
Tutorials/Tutorial32_VirtualGeomtry3/src/MeshSimplify/: BitArray.cpp  Heap.h  MeshSimplify.h
Tutorials/Tutorial33_RSM/: CMakeLists.txt
Tutorials/Tutorial33_RSM/assets/: CameraCB.hlsl  light.hlsl  rsm.hlsl
Tutorials/Tutorial33_RSM/src/: Tutorial33_RSM.cpp  Tutorial33_RSM.hpp
Tutorials/Tutorial34_SH/: CMakeLists.txt
Tutorials/Tutorial34_SH/assets/: SH.hlsl  SkyBox.hlsl
Tutorials/Tutorial34_SH/src/: Tutorial34_SH.cpp  Tutorial34_SH.hpp
Tutorials/Tutorial35_LPV/: CMakeLists.txt
Tutorials/Tutorial35_LPV/src/: Tutorial35_LPV.cpp  Tutorial35_LPV.hpp
Tutorials/Tutorial36_VXGI/: CMakeLists.txt
Tutorials/Tutorial36_VXGI/assets/: CameraCB.hlsl  Depth.hlsl  FillGbuffers.hlsl  IntegrationTex3D.hlsl  LightingUtil.hlsl  Voxelconetracing.hlsl  Voxelization.hlsl  VoxelizationVisualizer.hlsl  WorldPos.hlsl
Tutorials/Tutorial36_VXGI/src/: Scene.h  Tutorial36_VXGI.cpp  Tutorial36_VXGI.hpp
Tutorials/Tutorial37_SDF/: CMakeLists.txt
Tutorials/Tutorial37_SDF/assets/: IntegrationTex3D.hlsl  SDFRenderer.hlsl  bunny.dds  dragon.dds
Tutorials/Tutorial37_SDF/src/: BVHTree.cpp  BVHTree.h  Tutorial37_SDF.cpp  Tutorial37_SDF.hpp
